[gd_scene load_steps=3 format=3 uid="uid://draftpickdialog1"]

[ext_resource type="Script" path="res://src/ui/draft_pick_dialog.gd" id="1_script"]
[ext_resource type="Theme" path="res://theme/game_theme.tres" id="2_theme"]

[node name="DraftPickDialog" type="PanelContainer"]
theme = ExtResource("2_theme")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Choose Your Rookie"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Select one of these rookies to manage. The others will become your rivals."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="CandidatesContainer" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="Candidate1" type="PanelContainer" parent="MarginContainer/VBox/CandidatesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/CandidatesContainer/Candidate1"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate1/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Rookie Name"
horizontal_alignment = 1

[node name="ArchetypeLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate1/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Archetype"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/CandidatesContainer/Candidate1/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate1/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Charm: 30
Talent: 30
Stamina: 30
Style: 30"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox/CandidatesContainer/Candidate1/VBox"]
layout_mode = 2

[node name="PrefsLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate1/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Likes: Fried, Rice
Dislikes: Noodles, Sweet"

[node name="Candidate2" type="PanelContainer" parent="MarginContainer/VBox/CandidatesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/CandidatesContainer/Candidate2"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate2/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Rookie Name"
horizontal_alignment = 1

[node name="ArchetypeLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate2/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Archetype"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/CandidatesContainer/Candidate2/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate2/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Charm: 30
Talent: 30
Stamina: 30
Style: 30"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox/CandidatesContainer/Candidate2/VBox"]
layout_mode = 2

[node name="PrefsLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate2/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Likes: Fried, Rice
Dislikes: Noodles, Sweet"

[node name="Candidate3" type="PanelContainer" parent="MarginContainer/VBox/CandidatesContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/CandidatesContainer/Candidate3"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate3/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Rookie Name"
horizontal_alignment = 1

[node name="ArchetypeLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate3/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Archetype"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/CandidatesContainer/Candidate3/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate3/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Charm: 30
Talent: 30
Stamina: 30
Style: 30"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox/CandidatesContainer/Candidate3/VBox"]
layout_mode = 2

[node name="PrefsLabel" type="Label" parent="MarginContainer/VBox/CandidatesContainer/Candidate3/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Likes: Fried, Rice
Dislikes: Noodles, Sweet"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "A/D: Select Rookie | E: Confirm Selection"
horizontal_alignment = 1
